# search_engine

./: CMakeLists.txt  README.md  config.json  requests.json
include/: InvertedIndex.h  SearchServer.h  converter_json.h
nlohmann_json/: CMakeLists.txt
nlohmann_json/include/nlohmann/: record.proto
resources/: file025.txt
src/: CMakeLists.txt  InvertedIndex.cpp  SearchServer.cpp  converter_json.cpp  main.cpp
unitTests/: CMakeLists.txt  mainTest.cpp
